--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -18,13 +18,21 @@
 } */
 
 .create-form{
+    
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     
-    /* background-color:#1b4459; */
-   
+    background-color:rgba(27, 68, 89, 0.256);
+}
+
+.create-form1{
+    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .create-form__child{
@@ -40,7 +48,7 @@
 }
 
 
-.create-form__child h2{
+.create-form__child h2,h4{
     color: whitesmoke;
 }
 
@@ -49,9 +57,18 @@
     width: 90%;
     justify-content: center;
     gap: 12px;
-    padding: 20px;
+    padding: 0px;
     border-radius: 10px;
     background-color: rgba(1, 38, 56, 0.439);
+}
+
+.form-wrapper1{
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    gap: 12px;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .form-wrapper input{
